fixing width issues on firefox. The icon was not seen.

--- a/src/assets/css/mixin.scss
+++ b/src/assets/css/mixin.scss
@@ -84,7 +84,7 @@
 }
 
 @mixin img_size($w:20px, $h:20px) {
-  max-width: $w;
+  width: $w;
   max-height: $h;
   line-height: $h;
 
